still not working

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
     <head>
         <title>Patti's Groceries</title>
         <link rel="stylesheet" href="/assets/styles.css" />
-        <script defer src="./bundle/main.js"></script>
+        <script defer type="text/javascript" src="./bundle/main.js"></script>
     </head>
     <body>
-        <div id="app"></div>
+        <div id="root"></div>
     </body>
 </html>
