--- a/public/mockup.html
+++ b/public/mockup.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Grocery Tracker</title>
-        <link rel="stylesheet" href="/assets/styles.css" />
+        <link rel="stylesheet" href="./assets/styles.css" />
         <script defer src="./bundle/main.js"></script>
     </head>
     <body>
